<resources>
    <string name="app_name">Sensitivity Calculator</string>
    <string name="stats_label">f(dist) -> sens^-1 =</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="distance_per_360">Distance/360°</string>
    <string name="target_game">Target Game</string>
    <string name="unit">Unit</string>
    <string name="sensitivity_in_source_game">Sensitivity In Source Game</string>
    <string name="source_game">Source Game</string>
    <string name="add">Add</string>
    <string name="open_data_table">Open data table</string>
    <string name="factor">360°/(Sens*Dist)</string>
    <string name="linear_regression">Linear Regression</string>
    <string name="quadratic_regression">Quadratic Regression</string>
    <string name="factor_equal">Factor (360°/(Sens*Dist)) =</string>
    <string name="open_ar_label">Open AR</string>

    <!-- OpenGL compatibility dialog -->
    <string name="opengl_required_title">OpenGL Error</string>
    <string name="opengl_required_message">OpenGL ES %1$s or later required</string>

    <!-- camera permission dialog -->
    <string name="camera_permission_title">Camera Permission</string>
    <string name="camera_permission_message">Camera is used for Augmented Reality</string>
</resources>
